--- a/system-design/final-project/dashboard/style/style.css
+++ b/system-design/final-project/dashboard/style/style.css
@@ -26,6 +26,8 @@ body{
 	font-family: 'Roboto', sans-serif;
 	font-size: 2rem;
 	background: var(--bg);
+	color: var(--text); 
+
 }
 
 /* TYPOGRAPHY  */
