--- a/system-design/final-project/dashboard/style/tablet-vp.css
+++ b/system-design/final-project/dashboard/style/tablet-vp.css
@@ -1,6 +1,6 @@
 @media (max-width: 768px){
 
-/* ==================== SEARCH-BAR ====================  */
+    /* ==================== SEARCH-BAR ====================  */
     #sticky-nav .search-bar{
         display: none;
     }
@@ -15,7 +15,18 @@
     aside.collapse li h4{
         display: block;
     }
-    aside.collapse::after
+    /* ========== OVERLAY ==========  */
+
+
+    .overlay.active{
+        display: block;
+        position: fixed; top:0;
+        background: #303030; opacity: 0.85;
+        height: 100%; width: 100%;
+        z-index: 1;
+        cursor: pointer;
+        pointer-events: all;
+    }
 
 
 }
