--- a/system-design/final-project/dashboard/style/index.css
+++ b/system-design/final-project/dashboard/style/index.css
@@ -9,6 +9,7 @@
     justify-content: space-between;
     align-items: center;
     background: #fff;
+    z-index: 3;
     /* Stick to top  */
     position: sticky;
     top:0;
@@ -82,6 +83,7 @@ aside{
     box-shadow: 0 0.3rem 0.6rem rgb(0 0 0 / 13%);
     padding: 20px 15px;
     transition: all .25s ease;
+    z-index: 2;
     /* Stick to top  */
     position: sticky;
     top:70px;
@@ -116,10 +118,15 @@ aside.collapse li h4{
     display: none;
 }
 
-
+/* ========== OVERLAY ==========  */
+.overlay{
+    display: none;
+}
 
 /* ========== MAIN ==========  */
 
 main{
     flex-grow: 1;
+    /* z-index: -2; */
+    
 }
