connect with app.js

--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -80,11 +80,11 @@
 
 
         <main>
-            <h1 id="title">File Manager</h1>
+            <h1 id="title">Components</h1>
         </main>
 
     </div>
 
-    <script src="./app.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
