--- a/design-system/email/index.css
+++ b/design-system/email/index.css
@@ -40,8 +40,15 @@
     display: flex;
     padding: 1rem 2rem;
     margin: 1rem;
-    border-radius: 10px;
+    border-radius: 0 10px 10px 0;
     cursor: pointer;
+    position: relative;
+}
+#email-nav li.active::before, #email-nav li:hover::before{
+    content:''; 
+    position: absolute; left:0; top:0;
+    height: 100%; width:3px; 
+    background: var(--purple);
 }
 #email-nav li:hover{
     background: var(--purple-dimmed);
@@ -80,6 +87,10 @@
     margin:0 10px; 
 
 }
+#main .toolbar div label{
+    margin:10px;
+    width: 20px;  
+}
 #main .toolbar div img{
     height: 20px;
     margin: 10px; 
@@ -90,6 +101,12 @@
 #main .toolbar div:active{
     box-shadow: 0 0 0px 5px var(--purple-dimmed); 
 
+}
+#main .toolbar div:first-child{
+    cursor: auto;
+}
+#main .toolbar div:first-child:hover{
+    background: none;
 }
 #main .toolbar div:nth-child(4):hover{
     background: var(--warning);
@@ -124,6 +141,7 @@
 /* SEARCH BAR  */
 #main .toolbar #search-bar{
     min-width:200px;
+    max-width: 400px;
     flex-grow: 1;
     background: url(../img/search-icon.svg) no-repeat;
     background-position: 95% center;
