--- a/design-system/profile/index.css
+++ b/design-system/profile/index.css
@@ -1,7 +1,7 @@
 /* ========== CONTAINER ==========  */
 #profile-container{
     /* border:1px solid red; */
-    padding: 40px 20px;
+    padding: 40px 5%;
     display:grid;
     grid-template-columns: 35% 1fr;
     grid-template-rows: auto auto;
@@ -16,6 +16,9 @@
     box-shadow: 0 0 2rem 0 rgb(136 152 170 / 15%);
     padding:20px;
 }
+
+
+
 /* ========== PROFILE ==========  */
 #profile{
     grid-area: profile;
@@ -52,9 +55,10 @@
     color:var(--purple);
     border: 1px solid;
     padding:.5em;
-    margin:3rem .5rem;
+    margin:1.2rem .5rem 3rem .5rem;
     border-radius: 5px;
     cursor: pointer;
+    font-size:16px; 
 }
 
 #profile .cta> div:active{
@@ -73,6 +77,7 @@
 }
 #profile li{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     background: #f5f5f5;
@@ -80,7 +85,7 @@
     padding:.5rem 2rem;
     transition: all .5s ease; 
 }
-#profile li:hover , #profile li:hover img{
+#profile li:hover {
     background: var(--purple-dimmed);
 
 }
@@ -100,18 +105,83 @@
 }
 
 #profile .platform img{
-    background: #fff;
+    /* background: #fff;
     border-radius: 50%;
-    padding:.25rem; 
-     height: 30px;
-     width:30px;
+    padding:.25rem;  */
+     height: 20px;
+     width:20px;
      object-fit: contain;
      margin-right: 1rem;
 }
-#profile .platform 
+
+#profile .platform h4{
+    font-weight: 400;
+}
+#profile .handler{
+    margin-top:3px;
+}
+
+
 /* ========== DETAILS ==========  */
-#details{grid-area: details;}
+#details{
+    grid-area: details;
+    display: grid;
+    grid-template-columns: 20% auto;
+    row-gap: 1.5rem;
+}
+#details label{
+    font-size:18px;
+}
+#details input{
+    border:1px solid #dbdbdb;
+    border-radius: 3px;
+    padding: 0 1rem;
+}
+#details input:focus{
+    box-shadow: 0 0 0px 5px var(--purple-dimmed); 
+    border-color: var(--purple);
+    outline: none;
+
+}
+#details .save{
+    font-size:16px;
+    background: var(--purple);
+    width:fit-content; height: fit-content;
+    padding:.5em; 
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#details .save.save:active{
+    box-shadow: 0 0 0px 5px var(--purple-dimmed); 
+
+}
+
+
 
 /* ========== SKILLS ==========  */
-#skills{grid-area: skills;}
+#skills{
+    grid-area: skills;
+}
+#skills h5{
+    font-weight: 300;
+    margin: 1.5rem 0; 
+}
+#skills .progress{
+    height: 5px;
+    border-radius: 2px;
+    background:  linear-gradient(to right, var(--color) var(--prog), #eee var(--prog)) ;
+}
 
+/* ========== MEDIA QUERIES ==========  */
+@media (max-width:980px){
+    #profile-container{
+
+    grid-template-areas: 
+    "profile"
+    "details" 
+    "skills" ;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    }
+}
