--- a/design-system/file-manager/index.css
+++ b/design-system/file-manager/index.css
@@ -186,14 +186,14 @@
     justify-content: space-between;
     padding:.5em
 }
-#main .files .header >h4{ font-weight: 600;}
-#main .files .header >h4:first-child{flex-basis: 25%;flex-shrink: 0;}
+#main .files .header >h5{ font-weight: 600;}
+#main .files .header >h5:first-child{flex-basis: 25%;flex-shrink: 0;}
 /* files list  */
 #main .files ul{height: 300px; overflow: scroll;}
 #main .files li{
     display: flex;
     border-bottom: 1px solid #dbdbdb;
-    justify-content: space-between;
+    justify-content: space-between; align-items: center;
     padding: .5em; 
     cursor: pointer;
 }
@@ -203,18 +203,25 @@
 #main .files li:hover{
     background: #dbdbdb;
 }
-#main h4{font-weight: 400;}
+#main h5{font-weight: 400;}
 #main .files .file{
     display: flex;
     flex-basis: 25%;
     flex-shrink: 0;
 }
 #main .files img{
-    width:25px;height: 25px;
+    width:20px;height: 20px;
     margin-right:1rem;
 }
 
 /* ========== MEDIA QUERIES ==========  */
+@media (max-width:1130px){
+    #file-container{
+        grid-template-columns: 40% 1fr;
+    }
+    #main .services{ flex-direction: column;}
+    #main .services>div{ margin: 3rem 1rem;}
+}
 @media (max-width:980px){
     #file-container{
 
