--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -80,7 +80,18 @@
 
 
         <main>
-            <h1 id="title">Components</h1>
+            <div id="components-container">
+                <section id="cards">
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="./img/sky-1.jpeg">
+                        </div>
+                        <h4 class="title">Card Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet hic doloremque quaerat? Ab doloribus, ullam officia molestias vel dolore deleniti esse beatae dolorem atque id dicta totam consequatur voluptate magni.</p>
+                        <div class="button">CTA</div>
+                    </div>
+                </section>
+            </div>
         </main>
 
     </div>
