--- a/design-system/components/index.css
+++ b/design-system/components/index.css
@@ -1,3 +1,30 @@
-h1{
-    color:red; 
+#components-container{
+    padding:4rem 3%; 
+    border: 1px solid red; 
+}
+/* ========== CARDS ========== */
+#cards{
+    display: flex;
+    justify-content: space-between;
+}
+
+#cards .card{
+    flex-basis: 20%;
+    background: #fff;
+    border-radius: 7px;
+    box-shadow: 0 0 2rem 0 rgb(136 152 170 / 15%);
+    padding:2rem;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+#cards .img-container{
+    width:calc( 100% + 4rem);
+    margin-top:-2rem;
+    margin-left: -2rem;
+    height: 35%;
+}
+#cards img{ 
+    width:100%; height: 100%;
+    object-fit: cover;
 }
