--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -81,16 +81,70 @@
 
         <main>
             <div id="components-container">
+                <h2 class="section-title">Cards</h2>
                 <section id="cards">
+
                     <div class="card">
                         <div class="img-container">
                             <img src="./img/sky-1.jpeg">
                         </div>
                         <h4 class="title">Card Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet hic doloremque quaerat? Ab doloribus, ullam officia molestias vel dolore deleniti esse beatae dolorem atque id dicta totam consequatur voluptate magni.</p>
+                        <p>Lorem ipsum dolor sit amet totam consequatur voluptate magni.</p>
                         <div class="button">CTA</div>
                     </div>
+                    
+
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="./img/sky-2.jpeg">
+                        </div>
+                        <h4 class="title">Card Title</h4>
+                        <p>in culpa qui officia deserunt mollit anim id est laborum, ullamco laboris .</p>
+                        <div class="button">CTA</div>
+                    </div>
+
+
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="./img/sky-3.jpeg">
+                        </div>
+                        <h4 class="title">Card Title</h4>
+                        <p> quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo esse cillum dolore eu fugiat nulla</p>
+                        <div class="button">CTA</div>
+                    </div>
+
+
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="./img/sky-4.jpeg">
+                        </div>
+                        <h4 class="title">Card Title</h4>
+                        <p>in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+                        <div class="button">CTA</div>
+                    </div>
+
                 </section>
+
+
+                <h2 class="section-title">Bottons</h2>
+                <section id="buttons">
+
+                </section>
+
+                
+                <h2 class="section-title">Modal</h2>
+                <section id="modal">
+
+                </section>
+
+
+                
+                <h2 class="section-title">Accordion</h2>
+                <section id="accordion">
+
+                </section>
+
+
             </div>
         </main>
 
