--- a/design-system/components/index.css
+++ b/design-system/components/index.css
@@ -67,6 +67,6 @@ section{margin-bottom:5rem;}
     padding:2rem;
 }
 
-/* ========== MODAL ========== */
+/* ========== MODAL4 ========== */
 
 /* ========== ACCORDION ========== */
