--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -128,13 +128,31 @@
 
                 <h2 class="section-title">Bottons</h2>
                 <section id="buttons">
-
+                    <div class="btn filled">Filled</div>
+                    <div class="btn outlined">Outlined</div>
+                    <div class="btn rounded filled">rounded</div>
+                    <div class="btn rounded outlined">rounded outlined</div>
+                    <div class="btn loading filled"> loading</div>
+                    <div class="btn notification filled" data-notify='3'>Notification</div>
                 </section>
 
                 
                 <h2 class="section-title">Modal</h2>
                 <section id="modal">
-
+                    <div class="open-modal">Open Modal</div>
+                    <div class="modal-box">
+                        <header>
+                            <h4>Modal Title</h4>
+                            <div class='close-modal'>&times;</div>
+                        </header>
+                        <main>
+                            <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla asperiores illum dolorem necessitatibus perferendis dicta similique perspiciatis corporis quae ab?
+                            </p>
+                            <div class="cta">CTA</div>
+                        </main>
+                    </div>
+                    <div class="overlay"></div>
                 </section>
 
 
