--- a/design-system/components/index.css
+++ b/design-system/components/index.css
@@ -1,6 +1,6 @@
 #components-container{
     padding:4rem 7%; 
-    border: 1px solid red; 
+    /* border: 1px solid red;  */
 }
 #components-container .section-title{
     border-bottom: 1px solid #707070;
@@ -65,8 +65,136 @@ section{margin-bottom:5rem;}
     border-radius: 5px;
     box-shadow: 0 0 2rem 0 rgb(136 152 170 / 15%);
     padding:2rem;
+    display:grid;
+    grid-template-columns: auto auto;
+    justify-content: flex-start;
 }
 
-/* ========== MODAL4 ========== */
+#buttons .btn{
+    color:var(--purple);
+    border: 1px solid var(--purple);
+    border-radius: 5px;
+    padding: .5em 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    width:fit-content;
+    min-width:70px;
+    cursor: pointer;
+    text-align: center;
+}
+#buttons .btn:hover{filter:brightness(.9);}
+#buttons .btn:active{box-shadow: 0 0 0px 5px var(--purple-dimmed);}
+#buttons .filled{
+    background: var(--purple);
+    color:#fff;
+}
+#buttons .outlined{
+    background: none;
+    color:var(--purple);
+    transition: background .5s ease;
+}
+#buttons .outlined:hover{
+    background:var(--purple-dimmed);
+    border:1px solid var(--purple-dimmed);
+}
+#buttons .rounded{
+    border-radius: 30px;
+}
 
+#buttons .loading::before{
+    content:'';
+    color:#fff;
+    font-size: 24px;
+    animation: loading 1.5s linear infinite;
+
+}
+#buttons .notification{
+    position: relative;
+}
+#buttons .notification:after{
+    --scale:1;
+    position: absolute;
+    content:attr(data-notify);
+    height: 20px; width:20px;
+    background: var(--warning);
+    border-radius: 50%;
+    top:0; right:0;
+    transform:translate(50%,-50%)scale(var(--scale));
+    color:#fff; 
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 20px;
+    transition:all .5s ease; 
+}
+#buttons .notification:hover:after{
+    --scale:1.2;
+}
+/* ========== MODAL4 ========== */
+#modal .open-modal, #modal .cta{
+   padding: .5em 1em;
+   background: var(--purple); 
+   width:fit-content;
+   border-radius: 5px;
+   color:#fff; 
+   cursor: pointer;
+}
+#modal .open-modal:hover{filter:brightness(.9);}
+#modal .open-modal:active{box-shadow: 0 0 0px 5px var(--purple-dimmed);}
+
+#modal .modal-box{
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 2rem 0 rgb(136 152 170 / 15%);
+    width:500px; 
+    position:fixed;
+    top:50%; left:50%;
+    transform:translate(-50%,-50%);
+    overflow: hidden;
+}
+
+#modal header{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #f5f5f5;
+    padding:1rem 2rem;
+}
+#modal header .close-modal{
+    font-size: 32px;
+    cursor: pointer;
+
+}
+#modal main {
+    padding:2rem;
+
+}
+#modal main p{
+    padding:1em 0; 
+}
+#modal .overlay{
+    position: fixed;
+    top:0;bottom:0;left:0;right:0;
+    background: rgba(0, 0, 0, .5);
+    
+}
 /* ========== ACCORDION ========== */
+
+
+
+
+/* ========== KEYFRAMES ========== */
+
+@keyframes loading{
+    0%{content:'⣾'}
+    12%{content:'⣽'}
+    25%{content:'⣻'}
+    37%{content:'⢿'}
+    50%{content:'⡿'}
+    62%{content:'⣟'}
+    75%{content:'⣯'}
+    87%{content:'⣷'}
+    100%{content:'⣾'}
+}
+
+
