--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -140,7 +140,7 @@
                 <h2 class="section-title">Modal</h2>
                 <section id="modal">
                     <div class="open-modal">Open Modal</div>
-                    <div class="modal-box">
+                    <div class="modal-box active">
                         <header>
                             <h4>Modal Title</h4>
                             <div class='close-modal'>&times;</div>
@@ -152,7 +152,7 @@
                             <div class="cta">CTA</div>
                         </main>
                     </div>
-                    <div class="overlay"></div>
+                    <div class="modal-overlay active"></div>
                 </section>
 
 
