--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -159,7 +159,63 @@
                 
                 <h2 class="section-title">Accordion</h2>
                 <section id="accordion">
+                    <div class="accordion-container">
+                        <ul>
+                            <li class='list  '>
+                                <div class="header">
+                                    <h4> List 1</h4>
+                                    <div class="arrow">&#8250;</div>
+                                </div>
+                                <ul class="sub-list">
+                                    <li>tempor incididunt ut labore et dolore magna aliqua.</li>
+                                </ul>
 
+                            </li>
+
+                            
+                            <li class='list '>
+                                <div class="header">
+                                    <h4>List 2</h4>
+                                    <div class="arrow">&#8250;</div>
+                                </div>
+                                <ul class="sub-list">
+                                    <li>tempor incididunt ut labore et dolore magna aliqua.</li>
+                                    <li>laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                    <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                                    <li> labore et dolore magna non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                                </ul>
+                            </li>
+
+
+                            
+                            <li class='list '>
+                                <div class="header">
+                                    <h4>List 3</h4>
+                                    <div class="arrow">&#8250;</div>
+                                </div>
+                                <ul class="sub-list">
+                                    <li>tempor incididunt ut labore et dolore magna aliqua.</li>
+                                    <li>laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                </ul>
+                            </li>
+
+
+                            
+                            <li class='list '>
+                                <div class="header">
+                                    <h4>List 4</h4>
+                                    <div class="arrow">&#8250;</div>
+                                </div>
+                                <ul class="sub-list">
+                                    <li>tempor incididunt ut labore et dolore magna aliqua.</li>
+                                    <li>laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                    <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                                </ul>
+                            </li>
+
+
+                        </ul>
+                    </div>
                 </section>
 
 
